--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,25 +1,19 @@
+# This is an example goreleaser.yaml file with some sane defaults.
+# Make sure to check the documentation at http://goreleaser.com
 builds:
 - env:
   - CGO_ENABLED=0
-  ldflags:
-  - "-s -w -X github.com/lunarway/dextre/cmd.version={{.Version}} -X github.com/lunarway/dextre/cmd.commit={{.Commit}}"
-
 archive:
-  format: binary
-  name_template: "{{ .ProjectName }}-{{ .Os }}-{{ .Arch }}"
   replacements:
-    darwin: darwin
-    linux: linux
-
+    darwin: Darwin
+    linux: Linux
+    windows: Windows
+    386: i386
+    amd64: x86_64
 checksum:
-  name_template: '{{ .ProjectName }}-checksums.txt'
-
+  name_template: 'checksums.txt'
 snapshot:
-  name_template: "git-{{.Commit}}"
-
-release:
-  name_template: "v{{.Version}}"
-
+  name_template: "{{ .Tag }}-next"
 changelog:
   sort: asc
   filters:
