--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,13 +3,16 @@
 builds:
 - env:
   - CGO_ENABLED=0
+  
 archive:
+  format: binary
+  name_template: "{{ .ProjectName }}-{{ .Os }}-{{ .Arch }}"
   replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
+    darwin: darwin
+    linux: linux
+    windows: windows
     386: i386
-    amd64: x86_64
+
 checksum:
   name_template: 'checksums.txt'
 snapshot:
